--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "node generate.js",
+    "build": "kindlegen ./dict.opf",
     "admin": "http-server ./admin",
     "server": "nodemon server.js --harmony",
     "crawler:google": "node crawler/google.js"
